# weewx-clearskies-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  ctmpapi-patch.patch  lead-status-3b14.md  lead-status-fd3c508.md  pyproject.toml
.github/workflows/: dep-audit.yml  release.yml
etc/: api.conf.example  charts.conf.example
tests/: __init__.py  conftest.py  test_3a2_endpoints_integration.py  test_aggregation_defaults.py  test_almanac_unit.py  test_archive_agg.py  test_archive_params.py  test_astronomyapi_client.py  test_auto_calibration.py  test_body_size_limit.py  test_branding_logo_alt.py  test_capabilities_unit.py  test_charts_config.py  test_charts_config_integration.py  test_charts_unit.py  test_config_settings.py  test_config_settings_radar_validation.py  test_content_unit.py  test_correction_admin.py  test_correction_collector.py  test_correction_corrector.py  test_correction_db.py  test_correction_settings.py  test_correction_trainer.py  test_cors.py  test_cursor_encoding.py  test_db_engine.py  test_db_health_probe.py  test_db_integration.py  test_db_probe.py  test_db_reflection.py  test_db_session.py  test_endpoints_integration.py  test_endpoints_radar_frames_keyed_integration.py  test_endpoints_radar_tiles_integration.py  test_error_handler.py  test_fog_condition.py  test_fog_provider_crosscheck.py  test_forecast_correction_integration.py  test_haze_condition.py  (+56 more)
tests/benchmarks/: conftest.py  test_endpoint_benchmark.py
tests/unit/: __init__.py  test_column_units_validation.py
weewx_clearskies_api/: __init__.py  __main__.py  app.py  errors.py  health.py  i18n.py  metrics.py  tls.py  trust.py
weewx_clearskies_api/bootstrap/: __init__.py  importer.py  mcclear_client.py  openaq_client.py
weewx_clearskies_api/config/: __init__.py  settings.py
weewx_clearskies_api/correction/: __init__.py  collector.py  corrector.py  db.py  models.py  retrainer.py  trainer.py
weewx_clearskies_api/data/: __init__.py  charts.conf.default  gem_active_faults.geojson  meteor_showers.json  meteor_showers.py
weewx_clearskies_api/db/: __init__.py  engine.py  probe.py  reflection.py  registry.py
weewx_clearskies_api/endpoints/: __init__.py  alerts.py  almanac.py  aqi.py  archive_grouped.py  branding.py  capabilities.py  charts.py  climatology.py  content.py  custom_query.py  earthquakes.py  forecast.py  geographic_features.py  observations.py  pages.py  radar.py  records.py  reports.py  seeing.py  setup.py  sse.py  station.py  webcam.py  wind_rose.py
weewx_clearskies_api/enrichment/: __init__.py  lightning_strike_buffer.py  weather_text.py  wind_rolling_window.py
weewx_clearskies_api/sse/: emitter.py  (+15 more)
(+214 files in other folders)
